<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    android:layout_marginBottom="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:layout_margin="8dp">

        <LinearLayout
            android:id="@+id/Username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/from_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from_name"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/purple_700" />

            <ImageView
                android:id="@+id/arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_right_alt_24"
                android:layout_marginHorizontal="5dp"
                android:layout_gravity="center_vertical|center_horizontal"/>
            <TextView
                android:id="@+id/To_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_name"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/purple_700"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Username"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            tools:ignore="RelativeOverlap">

            <TextView
                android:id="@+id/rupee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rs"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#00b2ff"/>

            <TextView
                android:id="@+id/balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/rupeeslash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rupeeslash"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
        </LinearLayout>

        <TextView
            android:id="@+id/transaction_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Amount"
            android:text="@string/transaction_status"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>